fixed misaligned top of Hex

--- a/css/styleshexagon2.css
+++ b/css/styleshexagon2.css
@@ -221,6 +221,7 @@
 .hexagon:before,
 .hexagon2:before {
   bottom: 100%;
+  left: 0%;
   border-bottom: 115.47005px solid #C6538C;
 }
 
